--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,9 @@
 #root {
-    max-width: 1280px;
+    /* max-width: 1280px; */
+    width: 100%;
     margin: 0 auto;
-    padding: 2rem;
     text-align: center;
+    @apply font-Pretendard;
 }
 
 .logo {
