--- a/front/src/index.css
+++ b/front/src/index.css
@@ -31,8 +31,8 @@ body {
     margin: 0;
     display: flex;
     place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
