--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,7 @@
 #root {
     /* max-width: 1280px; */
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     text-align: center;
     @apply font-Pretendard;
