--- a/front/src/styles/App.css
+++ b/front/src/styles/App.css
@@ -14,5 +14,5 @@
     height: 90%;
 }
 .motion_basic {
-    @apply transition-all duration-300;
+    @apply transition-all duration-300 ease-in-out;
 }
