--- a/front/src/styles/App.css
+++ b/front/src/styles/App.css
@@ -6,7 +6,18 @@
     text-align: center;
     @apply font-Pretendard;
 }
-
+@font-face {
+    font-family: "D2Coding";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/D2Coding.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+/* Regular */
+@font-face {
+    font-family: "Pretendard-Regular";
+    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
+    font-style: normal;
+}
 #header {
     height: 10%;
 }
