--- a/front/src/styles/App.css
+++ b/front/src/styles/App.css
@@ -27,3 +27,7 @@
 .motion_basic {
     @apply transition-all duration-300 ease-in-out;
 }
+ul li {
+    list-style-type: none;
+    text-decoration: none;
+}
