--- a/front/src/styles/component.css
+++ b/front/src/styles/component.css
@@ -1,3 +1,10 @@
 .stepper {
     transition: background-color 0.3s ease;
 }
+
+//codeEdior
+
+#codeEditor::selection {
+    background: #6b668e;
+    color: #fff;
+}
