--- a/front/src/styles/designSystem.css
+++ b/front/src/styles/designSystem.css
@@ -23,3 +23,31 @@
 .pretendard_extrabold_32 {
     @apply font-Pretendard text-[32px] font-extrabold;
 }
+/* width 고정할지 정하기.*/
+.coco_button {
+    @apply inline-flex w-full items-center  justify-center bg-coco-green_500 text-center  text-black;
+}
+.coco_button:hover {
+    @apply bg-Navy-700 text-white;
+}
+.coco_button_outline {
+    @apply inline-flex w-full cursor-not-allowed items-center justify-center bg-coco-green_500 text-center text-coco-green_500;
+}
+.coco_button_disabled {
+    @apply inline-flex w-full cursor-not-allowed items-center justify-center bg-Navy-800 text-center text-Navy-500 hover:text-Navy-500;
+}
+.button_large {
+    @apply transition-all duration-300 ease-in-out;
+    @apply font-Pretendard text-[24px] font-bold;
+    @apply rounded-full py-3;
+}
+.button_medium {
+    @apply transition-all duration-300 ease-in-out;
+    @apply font-Pretendard text-[20px] font-medium;
+    @apply rounded-full py-2;
+}
+.button_small {
+    @apply transition-all duration-300 ease-in-out;
+    @apply font-Pretendard text-[12px] font-normal;
+    @apply rounded-full py-1;
+}
