--- a/front/src/styles/App.css
+++ b/front/src/styles/App.css
@@ -8,14 +8,14 @@
 }
 @font-face {
     font-family: "D2Coding";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_three@1.0/D2Coding.woff") format("woff");
+    src: url("../../Font/D2Coding.ttf") format("ttf");
     font-weight: normal;
     font-style: normal;
 }
 /* Regular */
 @font-face {
-    font-family: "Pretendard-Regular";
-    src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
+    font-family: "Pretendard";
+    src: url("../../Font/Pretendard.woff2") format("woff2");
     font-style: normal;
 }
 
